# pcr-globwb

./: .git-blame-ignore-revs  .gitignore  .gitmodules  pixi.toml  planning.md  pyproject.toml
conda_env/: pcrglobwb.yml
config/: setup_30min_temp.ini  setup_30sec_CERRA_schweiz_glacierComplete_seasonal_newLayerDepth.ini  setup_30sec_chelsa_alps_glacierComplete_validation_seasonal.ini  setup_30sec_chelsa_schweiz_glacierComplete_seasonal_newLayerDepth_test.ini  setup_30sec_meteoCH_schweiz_KCalibration.ini  setup_30sec_meteoCH_schweiz_complete_TEST_glaciers.ini  setup_30sec_meteoCH_schweiz_complete_glaciers.ini  setup_30sec_meteoCH_schweiz_complete_glaciers_dynamic.ini  setup_30sec_meteoCH_schweiz_complete_glaciers_notrans.ini  setup_30sec_meteoCH_schweiz_complete_glaciers_notrans_calib.ini  setup_30sec_meteoCH_schweiz_glacierCalibration.ini  setup_30sec_meteoCH_schweiz_glacierCalibration_TEST.ini  setup_30sec_meteoCH_schweiz_glacierCalibration_core2.ini  setup_30sec_meteoCH_schweiz_glacierCalibration_core3.ini  setup_30sec_meteoCH_schweiz_glacierComplete.ini  setup_30sec_meteoCH_schweiz_glacierComplete_validation_seasonal.ini  setup_30sec_meteoCH_schweiz_glacierComplete_validation_seasonal_deltaH_TEST.ini  setup_30sec_meteoCH_schweiz_glacierComplete_validation_seasonal_minSoilD.ini  setup_30sec_meteoCH_schweiz_glacierComplete_validation_seasonal_newKSat.ini  setup_30sec_meteoCH_schweiz_glacierComplete_validation_seasonal_newLayerDepth.ini  setup_30sec_meteoCH_schweiz_validation_seasonal_wo_glaciers.ini  setup_30sec_schweiz_alpine.ini  setup_30sec_schweiz_temp.ini  (+5 more)
(+206 files in other folders)
