[project]
name = "pcr-globwb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "netcdf4>=1.7.3",
    "numpy>=2.2.6",
    "python-dateutil>=2.9.0.post0",
    "six>=1.17.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
    "ruff>=0.15.7",
]


[tool.basedpyright]
executionEnvironments = [
  { root = "src" }
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
pcr-globwb = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pcraster = ">=4.4.2,<5"
